modified share.html test

--- a/share.html
+++ b/share.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>share</title>
 	<style>
+          *{margin:0;padding:0;}
 	    div{width:100px;height:100px;background:pink;}
 	</style>
 	<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
