--- a/share.html
+++ b/share.html
@@ -60,7 +60,7 @@
 	</script>
 </head>
 <body>
-	<div class="sina">tosina</div>
-	<div class="qq">toQQzone</div>
+	<div class="sina">Tosina</div>
+	<div class="qq">ToQQzone</div>
 </body>
 </html>
