--- a/ppt/index.html
+++ b/ppt/index.html
@@ -72,14 +72,14 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 	<h2>迷茫与危机感</h2>
 	<p>还记得它们吗？</p>
 	<ul>
-		<li class="fragment">Visual Basic</li>
+		<li class="fragment fade-up">Visual Basic</li>
 		<li class="fragment">ASP</li>
 		<li class="fragment">Flash</li>
 	</ul>
 </section>
 
 <section>
-	<h2>十年前前端圈子的状态</h2>
+	<h2>十年前前端圈子</h2>
 	<ul>
 		<li class="fragment">2005-02-08 Google Maps Launched</li>
 		<li class="fragment">2005-02-18 Ajax</li>
