--- a/ppt/zhoujun.html
+++ b/ppt/zhoujun.html
@@ -46,9 +46,9 @@
 <!--自我介绍-->
 			<section data-background="images/bj.png">
 				<h2>自我介绍</h2>
-				<p class="fragment fade-right col">周军</p>
-				<p class="fragment fade-right col">未婚</p>
-				<p class="fragment fade-right col">H5前端工程师</p>
+				<p class="fragment fade-right">周军</p>
+				<p class="fragment fade-right">技术中心-无线系统部</p>
+				<p class="fragment fade-right">H5前端工程师</p>
 			</section>
 <!--擅长领域或技术-->
 			<section>
@@ -79,7 +79,7 @@
 <!--肯定自己-->
 			<section>
 				<section data-background="https://s3.amazonaws.com/hakim-static/reveal-js/image-placeholder.png">
-					<p class="col">所以我觉得我自己还算是一名合格的前端开发工程师</p>
+					<p class="col">我觉得我自己还算是一名合格的前端开发工程师</p>
 				</section>
 				<section data-background="http://i.giphy.com/90F8aUepslB84.gif">
 					<h2>...不敢相信!</h2>
