--- a/ppt/weex.html
+++ b/ppt/weex.html
@@ -258,6 +258,23 @@ stream.fetch({
 						<h2>mcp-kit</h2>
 						<img width="450" height="500" data-src="./images/wx-3.jpg" alt="Down arrow">			
 				</section>
+				<section>
+<pre>
+ <code>
+npm install mcp-kit -g   // 安装mcp脚手架
+ </code>
+</pre>
+					<pre>
+						<code>
+mcp -v           //查看当前脚手架工具版本号
+mcp -h           //查看当前脚手架全部命令
+mcp create xxx   //创建xxx项目
+mcp install      //安装项目依赖
+mcp start        //本地启动项目
+mcp build        //打包
+						</code>
+					</pre>	
+			   </section>
 			</section>
 
 			<section>
