--- a/ppt/weex.html
+++ b/ppt/weex.html
@@ -41,20 +41,28 @@
 		<!-- Any section element inside of this container is displayed as a slide -->
 		<div class="slides">
 			<section>
-				<h1>weex实践分享</h1>
+				<h1>weex</h1>
 				<p>
 					<small>Created by <a href="https://studendzhoujun.github.io/">zhoujun</a></small>
 				</p>
 			</section>
 
 			<section>
-				<h2>什么是weex?</h2>
-				<ol>
-					<li class="fragment">使用流行的web开发体验来开发高性能原生应用的框架</li>
-					<li class="fragment">通过web开发语言来构建Android，ios，web应用</li>
-					<li class="fragment">一个跨平台的解决方案</li>
-					<li class="fragment">一套代码多端运行</li>
-				</ol>
+				<section>
+					<h2>什么是weex ?</h2>
+					<ol>
+						<li class="fragment">一个跨平台的解决方案</li>
+						<li class="fragment">使用流行的web开发体验来开发高性能原生应用的框架</li>
+						<li class="fragment">通过web开发语言来构建Android，ios，web应用</li>
+						<li class="fragment">一套代码多端运行</li>
+					</ol>
+					<p class="fragment" style="font-size:20px; text-align:left;">ps: 我们只需要在自己的APP中嵌入Weex的SDK，就可以用HTML/CSS/JavaScript来开发Native级别的UI界面。</p>
+					<p class="fragment" style="font-size:20px; text-align: left;">ps: 解决了频繁发版和多端研发两大痛点</p>
+				</section>
+                <section>
+					    <h4>谁在使用</h4>
+						<img width="800" height="600" data-src="./images/use.jpg" alt="Down arrow">
+				</section>
 			</section>
 
 			<section>
@@ -62,9 +70,11 @@
 					<h2>weex中的前端框架</h2>
 				</section>
 			    <section>
-					<img width="800" height="400" data-src="./images/vuerax.png" alt="Down arrow">
-					<p class="fragment">Vue.js 是一个不断进化中的前端框架</p>
-				    <p class="fragment">Rax提供类React语法和兼容性的前端框架</p>
+				   <p class="fragment">贴近前端生态</p>
+					<img width="700" height="300" data-src="./images/vuerax.png" alt="Down arrow">
+					<p class="fragment" style="font-size:20px;">Vue.js 是一个不断进化中的前端框架</p>
+					<p class="fragment" style="font-size:20px;">Rax提供类React语法和兼容性的前端框架</p>
+					<p class="fragment" style="font-size:20px;text-align:left;">Weex 拥抱已有的 Web 生态，你可以使用现代化的前端技术开发移动应用。 Weex 支持了最常用 CSS 样式以及最流行的前端框架，如 Vue 和 Rax，在未来或许还可以支持更多。</p>
 				</section>
 				<section>
 					<h2>用vue.js来进行移动端应用的开发</h2>
@@ -72,7 +82,7 @@
 					<p class="fragment grow">1.vue的基础知识</p>
 					<p class="fragment grow">2.会安装node和使用npm进行包管理</p>
 					<p>3.会基本的 <span class="fragment highlight-red">html</span> <span class="fragment highlight-blue">css</span> <span class="fragment highlight-green">javaScript</span>知识</p>
-					<p class="fragment fade-up">4.按照weex提供的基础组件来开发</p>
+					<p class="fragment fade-up">4.按照weex提供的基础组件,内置模块来开发</p>
 				</section>
 				<section>
                     <h2>组件</h2>
@@ -226,20 +236,16 @@ stream.fetch({
 				</section>
 			</section>
 			<section>
-				<h2>weex初体验</h2>
-				<img width="500" height="400" data-src="./images/wx-2.jpg" alt="Down arrow">
-				<img width="400" height="600" data-src="./images/wx-1.jpg" alt="Down arrow">
-			</section>
-			<!-- <section data-background-video="./images/video1.mp4"
-				 data-background-color="#000000">
-			</section> -->
-			<section>
 				<section data-markdown>
 					<h2>开发环境</h2>
 					<p>weex提供了weex-toolkit 脚手架工具</p>
 					<p>需要安装node.js和Weex Cli</p>
 					<p>weex -v //查看当前weex工具版本</p>
 					<p>weex create xxxx //创建项目</p>
+					<p>weex run ios //ios 模拟器预览</p>
+					<p>weex run android //Android 模拟器预览</p>
+					<p>weex run web //web 端预览</p>
+
 					<script type="text/template">
 						```
 						  # 开发环境
@@ -252,11 +258,21 @@ stream.fetch({
 						```
 						   weex create xxxx //创建项目
 						```
+						```
+						   weex run ios //ios 模拟器预览
+						```
+						
+						```
+						   weex run android  // Android 模拟器预览
+						```
+						```
+						   weex run web //web 端预览
+						```
 					</script>		
 				</section>
 				<section>
 						<h2>mcp-kit</h2>
-						<img width="450" height="500" data-src="./images/wx-3.jpg" alt="Down arrow">			
+						<img width="450" height="600" data-src="./images/wx-3.jpg" alt="Down arrow">			
 				</section>
 				<section>
 <pre>
@@ -279,14 +295,22 @@ mcp build        //打包
 
 			<section>
 				<section>
-					<h2>weex实践例子</h2>
-					<p class="fragment" style="color:#090">车抵贷</p>
+					<h2>weex初体验</h2>
+					<img width="500" height="400" data-src="./images/wx-2.jpg" alt="Down arrow">
+					<img width="400" height="600" data-src="./images/wx-1.jpg" alt="Down arrow">
 				</section>
+				<section>
+					<h2>weex例子</h2>
+					<p class="fragment" style="color:#090">车抵贷-首页</p>
+				</section>
+				<section data-background-video="./images/video2.mp4"
+				 data-background-color="#000000">
+			    </section>
 			</section>
 
              <section>
 				 <section>
-					 <h2>weex工作原理</h2>
+					 <h2>weex工作流</h2>
 				 </section>
 				 <section>
 					<img width="900" height="700" data-src="./images/weex.jpg" alt="Down arrow">	
@@ -363,7 +387,7 @@ mcp build        //打包
 			<section style="text-align: left;">
 				<h1>THE END</h1>
 				<p>
-					- <a href="http://slides.com">Try the online editor</a> <br> - <a href="https://github.com/hakimel/reveal.js">Source code &amp; documentation</a>
+					- <a href="http://editor.weex.io/">Try the online editor</a> <br> - <a href="https://github.com/apache/incubator-weex">Source code &amp; documentation</a>
 				</p>
 			</section>
 			<section data-background="http://i.giphy.com/90F8aUepslB84.gif">
