:tada: ppt weex

--- a/ppt/weex.html
+++ b/ppt/weex.html
@@ -77,6 +77,17 @@
 					<p class="fragment" style="font-size:20px;text-align:left;">Weex 拥抱已有的 Web 生态，你可以使用现代化的前端技术开发移动应用。 Weex 支持了最常用 CSS 样式以及最流行的前端框架，如 Vue 和 Rax，在未来或许还可以支持更多。</p>
 				</section>
 				<section>
+					<h2>JS Framework</h2>
+					<p>weex 为什么能支持多个前端框架，又能跨平台渲染</p>
+				</section>
+				<section>
+					<img width="700" height="300" data-src="./images/wx-4.png" alt="Down arrow">
+					<p style="font-size:24px;">JS Framework 介于前端框架和原生渲染引擎之间，处于承上启下的位置</p>
+					<p style="font-size:24px;"> Vue 和 Rax 对 Weex 而言只属于语法层，或者称之为 DSL (Domain Specific Language)</p>
+					<p style="font-size:24px;"> Vue 和 Rax 都是用来描述页面结构以及开发范式的</p>
+					<p style="font-size:24px;">最终都会通过JS Framework 提供的接口来调用原生功能并且渲染真实 UI</p>
+				</section>
+				<section>
 					<h2>用vue.js来进行移动端应用的开发</h2>
 					<p>需要的前置条件:</p>
 					<p class="fragment grow">1.vue的基础知识</p>
@@ -146,11 +157,11 @@
 				</section>
 				<section>
 					<ol>
-						<li class="fragment">list</li>
-						<li class="fragment">scroller</li>
-						<li class="fragment">slider</li>
-						<li class="fragment">loading</li>
-						<li class="fragment">input</li>
+						<li class="fragment">list--提供垂直列表功能的核心组件,适用于长列表的展示</li>
+						<li class="fragment">scroller--一个滚动容器组件</li>
+						<li class="fragment">slider--轮播组件</li>
+						<li class="fragment">waterfall-瀑布流组件</li>
+						<li class="fragment">video--页面中嵌入视频</li>
 					</ol>
 				</section>
 			</section>
